feat: implement comprehensive asset management module including inventory, maintenance, and lifecycle tracking